Picture-in-Picture close button click decrements keep alive count.

This makes sure extension internal keep_alive_count counter decrement
when user clicks "Close" button on the Picture-in-Picture window.

Bug: 878743

Change-Id: I4a82ba3e0fa3c3de7241e73352ced30e14c59ca1
Reviewed-on: https://chromium-review.googlesource.com/1193877
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/master@{#587591}
Former-commit-id: 058085dc79716a97136893e7396b63ed7197ee4f